# buildingmotif-mcp

./: LICENSE  README.md  USAGE.md  VSCODE_SETUP.md  pyproject.toml  test_server.py
buildingmotif_mcp/: __init__.py  main.py  ontology.py  server.py  tools.py
buildingmotif_mcp/ontologies/brick/: Brick-subset.ttl.metadata
examples/sample-org/: shapes.ttl  shapes.ttl.metadata
ontologies/brick/: .gitkeep
